# acala-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rust-toolchain.toml
.github/workflows/: docker.yml  test.yml
src/: chain_spec.rs  main.rs
