[package]
name = "acala-node"
authors = ["Acala Developers"]
version = "3.0.0"
edition = "2021"

[[bin]]
name = "acala"
path = "src/main.rs"

[dependencies]
color-eyre = { version = "0.6.3", default-features = false }

polkadot-parachain-lib = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2409" }

[build-dependencies]
substrate-build-script-utils = "11.0.0"
orml-build-script-utils = "1.0.0"
ureq = "2.12.1"

[profile.release]
lto = true
codegen-units = 1
