[package]
name = "acala-node"
authors = ["Acala Developers"]
version = "3.1.0"
edition = "2021"

[[bin]]
name = "acala"
path = "src/main.rs"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }

polkadot-omni-node-lib = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2603" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2603" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2603" }

[build-dependencies]
substrate-build-script-utils = "11.0.1"
orml-build-script-utils = "1.4.0"
ureq = "3.3.0"

[profile.release]
lto = true
codegen-units = 1
